# fund

./: .gitignore  .gitmodules  README.md
fund1/: .clang-format  .gitignore  CMakeLists.txt  README.md
fund1/cli/: CMakeLists.txt
fund1/cmake/: dsym.cmake
fund1/docs/: Doxyfile.in
fund1/docs/html/: annotated.html  classes.html  dir_0458770ad8041344475ccda3d1e5344a.html  dir_0d356d2b134d57cb95d7190af5f45549.html  dir_0d961368422b9201b14b8ef61f0adaa7.html  dir_16c4fdd939e63275f0aaf1bae7ef07d4.html  dir_1efefdd8e178955737b0cb7900a83751.html  dir_2657adba69808030b54a401db9e58e1b.html  dir_2ebfa31ad3219d1ad0a75b1e329dc997.html  dir_2f6c93922466f2e65d49bf9e4625a581.html  dir_378fc1ca6cbeb7fb169f99c0f91a8636.html  dir_39de1f2655cef2d2267abe86eb5be146.html  dir_3ac1367e940a6f7a68e402aa5d3d70e9.html  dir_3efad52eb8987b4d50c00f9272e571e7.html  dir_505da3f4d9b758332375be43c29ba974.html  dir_5df6cf738386fc40363f615b6bb6a0d3.html  dir_683c60a52f8e42c26269c9cfd6ef0fec.html  dir_90c6131cec80f202f2eab78f7f8fd25a.html  dir_98d2ba464d0771096f56f21a9ff23427.html  dir_9c26c8d1c5ee4a76e39da5b2c1ca32ef.html  dir_a2b68191755d127bc32281764933473a.html  dir_a30cc7fd8aa994654263e26d9a0b241b.html  dir_a837339738fe96544952665ecbe00ec8.html  dir_a8fd5c08239566347e5da3ad11c62290.html  dir_af54c33a147fb6e2c5aeeac4271a1774.html  dir_b21019c35b9941cab3ca0c9f6cc043e9.html  dir_bf07223c10642a186a15ec16bcbcb9dd.html  dir_c26f58b8b07f8b932133a2a72dd81dda.html  dir_c2e9aee1e4cb09cfedca3d0fc22e9691.html  dir_ce45f79aaf06bd4695e0f20ae3cc8c81.html  dir_d6346c2c25d2ed0b4affc8902b3fcf82.html  dir_e3a70af95c68a70316e27a68bf60cccb.html  dir_f767152287b865a94e1868926b8b4420.html  doxygen_crawl.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  (+38 more)
fund1/docs/html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+54 more)
fund1/errors/: CMakeLists.txt
fund1/errors/errors/: errors.h
fund1/libcli/: CMakeLists.txt
fund1/libcli/examples/: cli_usage.c
fund1/libcli/libcli/: cli.c  cli.h  parsing.c  parsing.h
fund1/libcli/libcli/parsing/: errors.c  errors.h  fp.c  fp.h  int.c  int.h
fund1/libcli2/: CMakeLists.txt
fund1/libcli2/libcli2/: cli.c  cli.h  types.h
fund1/libcli2/libcli2/parsing/: errors.c  errors.h  fp.c  fp.h  int.c  int.h  string.c  string.h
fund1/libcli3/libcli3/: cli.c
fund1/libcli3/libcli3/parsing/: errors.c  errors.h  fp.c  fp.h  int.c  int.h  params.c  params.h  string.h  types.h
fund1/liberrors/liberrors/: errors.c  errors.h
fund1/libfiles/: CMakeLists.txt
fund1/libfiles/libfiles/: errors.c  errors.h  files.c  files.h  path.c
fund1/libmath/libmath/: math.c  math.h
fund1/libmath/libmath/numeric/: dichotomy.c  dichotomy.h  integral.c  integral.h  limits.c  series.c  series.h
fund1/libstring/libstring/: string.c
fund1/libstruct/libstruct/darray/: int.c  int.h
fund1/libtask/: CMakeLists.txt
fund1/libtask/libtask/: math.c  math.h  string.c  string.h  task.c  task1.c  task1.h  utils.h
fund1/libtask/libtask/numeric/: dichotomy.c  dichotomy.h  integral.c  integral.h  limits.c  limits.h  series.c  series.h
fund1/libtask/libtask/task1/: task1.c  task1.h
fund1/libtask/libtask/task10/: task10.c
fund1/libtask/libtask/task2/: dichotomy.c  dichotomy.h  limits.c  limits.h  series.c  series.h
fund1/libtask/libtask/task3/: task3.c  task3.h
fund1/libtask/libtask/task4/: task4.c
fund1/libtask/libtask/task5/: series.c  series.h
fund1/libtask/libtask/task6/: integral.c  integral.h
fund1/libtask/libtask/task7/: task7.c  task7.h
fund1/libtask/libtask/task8/: task8.c  task8.h
fund1/libtask/libtask/task9/: random.c  random.h  task9.c
fund1/task1/: CMakeLists.txt
fund1/task1/task1/: handler.c  handler.h  handlers.c  handlers.h  main.c
fund1/task10/: CMakeLists.txt
fund1/task10/task10/: main.c
fund1/task2/: CMakeLists.txt
fund1/task2/task2/: handlers.c  handlers.h  main.c  utils.h
fund1/task3/: CMakeLists.txt
fund1/task3/task3/: handlers.c  handlers.h  main.c
fund1/task4/: CMakeLists.txt
fund1/task4/task4/: handlers.c  handlers.h  main.c
fund1/task5/: CMakeLists.txt
fund1/task5/task5/: handlers.c  handlers.h  main.c
fund1/task6/: CMakeLists.txt
fund1/task6/task6/: handlers.c  handlers.h  main.c
fund1/task7/: CMakeLists.txt
fund1/task7/task7/: handlers.c  handlers.h  main.c
fund1/task8/: CMakeLists.txt
fund1/task8/task8/: handlers.c  handlers.h  main.c
fund1/task9/: CMakeLists.txt
fund1/task9/task9/: handlers.c  handlers.h  main.c
fund1/tests/: even.in  odd.in  task4.in  task8.in
fund1/tests/scripts/: task10_fuzzing.py
fund2/: .clang-tidy  (+3 more)
fund2/libconfig/: CMakeLists.txt
fund2/libconfig/libconfig/: config.h.in
fund5/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
fund5/cmake/: exec.cmake  lib.cmake  testing.cmake
fund5/libtask/: CMakeLists.txt
fund5/libtask/libtask/task1/: binary_int.cpp  binary_int.hpp  binary_int.test.cpp
fund5/libtask/libtask/task2/: encoder.cpp  encoder.hpp  encoder.test.cpp  exceptions.hpp  state_array.cpp  state_array.hpp  types.hpp
fund5/libtask/libtask/task3/: logical_values_array.cpp  logical_values_array.hpp  logical_values_array.test.cpp
fund5/libtask/libtask/task4/: complex.cpp  complex.hpp  complex.test.cpp
fund5/libtask/libtask/task6/: vector.cpp  vector.hpp  vector.test.cpp
fund5/tests/task2/: test1.in
task1/: .gitignore  CMakeLists.txt
task1/cli/cli/: cli.c  cli.h  parsing.c  parsing.h
task1/include/: cli.h
task1/libtask/: CMakeLists.txt
task1/libtask/libtask/: task.h
task1/src/: cli.c
task1/task1/: CMakeLists.txt
task1/task1/task1/: task.c  utils.h
(+280 files in other folders)
